--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ article {
   }
 
   .artikel {
+    flex-direction: collumn;
     flex-warp: warp;
     justify-content: center;
     align-item: center;
