--- a/style.css
+++ b/style.css
@@ -165,6 +165,10 @@ article {
   .artikel {
     flex-wrap: wrap;
     flex-direction: column;
+    align-items: center;
+  }
+  article {
+    padding: 10px;
   }
   #informasi {
     flex-wrap: wrap;
